fix: display scrollbars only when content exceeds editor container sizes

--- a/web_ide/editor/index.css
+++ b/web_ide/editor/index.css
@@ -263,3 +263,7 @@ html::selection {
     left: var(--width-for-menu);
     z-index: -1;
 }
+
+.hidden {
+    display: none;
+}
